<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/image_background">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_label"
        android:layout_width="250dp"
        android:layout_height="68dp"
        android:background="@drawable/characters_frame"
        android:gravity="center"
        android:text="@string/input_characters"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_input_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/default_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/ed_input"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/input_frame"
        android:gravity="center_vertical"
        android:hint="@string/input_hint"
        android:paddingEnd="2dp"
        android:paddingStart="9dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_input_bar"
        app:layout_constraintEnd_toStartOf="@+id/tv_complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_input_bar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/complete"
        android:textColor="@color/dialog_success_empty"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_input_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_input_bar" />

</android.support.constraint.ConstraintLayout>