<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/nav_bar"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/view_dividing"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/dividing_line"
        app:layout_constraintBottom_toTopOf="@+id/view_nav_bar" />

    <View
        android:id="@+id/view_action_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/nav_bar"
        app:layout_constraintBottom_toTopOf="@+id/view_dividing" />

    <com.uniquext.android.imageeditor.widget.TrimView
        android:id="@+id/view_image_trim"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/image_background"
        app:layout_constraintBottom_toTopOf="@+id/view_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_rotate_rate_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:src="@mipmap/icon_rotate_rate_free_checked"
        app:layout_constraintBottom_toBottomOf="@+id/view_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_action_bar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_rotate_rate_free"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/rotate_free"
        android:textColor="@color/text_theme_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_rotate_rate_free"
        app:layout_constraintStart_toStartOf="@+id/iv_rotate_rate_free"
        app:layout_constraintTop_toBottomOf="@+id/iv_rotate_rate_free" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_rotate_rate_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:src="@mipmap/icon_rotate_rate_1_normal"
        app:layout_constraintBottom_toBottomOf="@+id/view_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_action_bar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_rotate_rate_1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/rotate_rate_1"
        android:textColor="@color/text_default_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_rotate_rate_1"
        app:layout_constraintStart_toStartOf="@+id/iv_rotate_rate_1"
        app:layout_constraintTop_toBottomOf="@+id/iv_rotate_rate_1" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_rotate_rate_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:src="@mipmap/icon_rotate_rate_2_normal"
        app:layout_constraintBottom_toBottomOf="@+id/view_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_action_bar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_rotate_rate_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/rotate_rate_2"
        android:textColor="@color/text_default_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_rotate_rate_2"
        app:layout_constraintStart_toStartOf="@+id/iv_rotate_rate_2"
        app:layout_constraintTop_toBottomOf="@+id/iv_rotate_rate_2" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_rotate_rate_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:src="@mipmap/icon_rotate_rate_3_normal"
        app:layout_constraintBottom_toBottomOf="@+id/view_action_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintVertical_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_action_bar" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_rotate_rate_3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/rotate_rate_3"
        android:textColor="@color/text_default_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_rotate_rate_3"
        app:layout_constraintStart_toStartOf="@+id/iv_rotate_rate_3"
        app:layout_constraintTop_toBottomOf="@+id/iv_rotate_rate_3" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:padding="15dp"
        android:src="@mipmap/icon_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/view_nav_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_nav_bar" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:padding="15dp"
        android:src="@mipmap/icon_confirm"
        app:layout_constraintBottom_toBottomOf="@+id/view_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_nav_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/trim"
        android:textColor="@color/text_default_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/view_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_nav_bar" />

</android.support.constraint.ConstraintLayout>